# ti6al4v-force-ellipsoids

./: .gitignore  CITATION.cff  LICENSE  README.md  README_PT.md  UPLOAD_TO_GITHUB.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
LICENSES/: CC-BY-4.0.txt  MIT.txt
data/: README.md
data/metadata/: DOE_titanio_C50_R08_CCD.xlsx
data/processed/: experiment_summary.csv
data/validation/: teste_OLS_referencia.xlsx
docs/: release_checklist.md  reproducibility.md
notebooks/: 00_metodologia_resumida.ipynb  01_reproduce_published_model.ipynb  02_extract_ellipsoid_features_template.ipynb
scripts/: reproduce_model.py
src/machining_ellipsoids/: __init__.py  ellipsoid_features.py  modeling.py
tests/: test_ellipsoid_features.py  test_published_model.py
